ajout du cours du 05 01 2020

--- a/exercice1.html
+++ b/exercice1.html
@@ -17,7 +17,7 @@
     <div class="navbar">
       <div class="container">
         <div class="display-flex">
-          <img src="/assets/images/logo.png" alt="" class="logo">
+          <img style="display:none" src="/assets/images/logo.png" alt="" class="logo">
           <nav class="top-navigation">
             <ul>
               <li>Accueil</li>
@@ -31,19 +31,31 @@
     </div>
   </header>
   <main>
-    <section class="display-flex">
+    <section class="banner-container display-flex">
       <div class="container">
         <div class="home-banner">
           <h1>Serving you since 1989</h1>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta facere architecto ab delectus, dolores atque excepturi pariatur saepe repellendus repellat, sit aut perspiciatis, sint quisquam amet. Corrupti veniam molestiae alias.
           </p>
-          <a href="#" class="button button-outline">
+          <a href="#" class="button button-outline bounce">
             Lire plus
           </a>
         </div>
       </div>
     </section>
+    <ul>
+      <li>test </li>
+      <li>test </li>
+      <li>test </li>
+      <li>test </li>
+      <li>test </li>
+      <li>test </li>
+      <li>test </li>
+      <li>test </li>
+      <li>test </li>
+      <li>test </li>
+    </ul>
     <section class="services-section">
       <div class="container">
         <div class="services-section-header">
