ajout des images du jeux

--- a/exercice1.html
+++ b/exercice1.html
@@ -30,6 +30,8 @@
       </div>
     </div>
   </header>
+  
+  <!-- CONTENU DE NOTRE PAGE -->
   <main>
     <section class="banner-container display-flex">
       <div class="container">
@@ -104,6 +106,9 @@
       </div>
     </section>
   </main>
+  <!-- FIN CONTENU DE NOTRE PAGE -->
+
+  <!-- PIEDS DE PAGE DE NOTRE PAGE -->
   <footer>
     <div class="container">
       <div class="open-time">
@@ -112,5 +117,6 @@
       </div>
     </div>
   </footer>
+  <!-- FIN PIEDS DE PAGE DE NOTRE PAGE -->
 </body>
 </html>
